@@ -6394,3 +6394,5 @@ PACKAGE: 2.2.99.2
 2007-04-11 cjg
  * Added a new loglevel which tells when (de)indexing a field is finished.
 
+2007-04-11 cjg
+ * Bail out of an unpack if there is no mimetype, avoiding an undef warning.
